--- a/.github/workflows/vm-deploy.yml
+++ b/.github/workflows/vm-deploy.yml
@@ -51,4 +51,6 @@ jobs:
               -e SUPER_SECRET_TOKEN=${{ secrets.SUPER_SECRET_TOKEN }} \
               -e LIMIT=${{ secrets.LIMIT }} \
               -e RESET_WEBHOOK_URL=${{ secrets.RESET_WEBHOOK_URL }} \
+              -e WEBHOOK_PORT=${{ secrets.WEBHOOK_PORT }} \
+              -e PORT=${{ secrets.PORT }} \
               chofnar/go-release-bot:${{ github.sha }}
