--- a/.github/workflows/vm-deploy.yml
+++ b/.github/workflows/vm-deploy.yml
@@ -47,10 +47,11 @@ jobs:
               -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
               -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
               -e AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }} \
-              -e GITHUB_GQL_TOKEN=${{ secrets.GITHUB_GQL_TOKEN }} \
+              -e GRAPHQL_TOKEN=${{ secrets.GRAPHQL_TOKEN }} \
               -e SUPER_SECRET_TOKEN=${{ secrets.SUPER_SECRET_TOKEN }} \
               -e LIMIT=${{ secrets.LIMIT }} \
               -e RESET_WEBHOOK_URL=${{ secrets.RESET_WEBHOOK_URL }} \
               -e WEBHOOK_PORT=${{ secrets.WEBHOOK_PORT }} \
               -e PORT=${{ secrets.PORT }} \
+              -e BOT_TABLE_NAME=${{ secrets.BOT_TABLE_NAME }} \
               chofnar/go-release-bot:${{ github.sha }}
