--- a/.github/workflows/vm-deploy.yml
+++ b/.github/workflows/vm-deploy.yml
@@ -34,6 +34,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: chofnar/go-release-bot:${{ github.sha }}
+          platforms: linux/arm64
 
       - name: Deploy to VM
         uses: appleboy/ssh-action@master
