--- a/.github/workflows/ssh-deploy.yml
+++ b/.github/workflows/ssh-deploy.yml
@@ -10,32 +10,6 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: arm64
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Log in to Docker Registry
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: chofnar/go-release-bot:${{ github.sha }}
-          platforms: linux/arm64
-
       - name: Deploy to VM
         uses: appleboy/ssh-action@master
         with:
@@ -43,7 +17,6 @@ jobs:
           username: ${{ secrets.VM_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            sudo docker pull chofnar/go-release-bot:${{ github.sha }}
             sudo docker stop go-release-bot || true
             sudo docker rm go-release-bot || true
             sudo docker run -d --name go-release-bot -p 8443:8443 \
@@ -61,4 +34,4 @@ jobs:
               -e PORT=${{ secrets.PORT }} \
               -e BOT_TABLE_NAME=${{ secrets.BOT_TABLE_NAME }} \
               --network traefik_network \
-              chofnar/go-release-bot:${{ github.sha }}
+              go-release-bot:latest
